add the add_categorie method and her swagger documentation
